--- a/catapulte.ui
+++ b/catapulte.ui
@@ -24,7 +24,7 @@
     <item>
      <layout class="QHBoxLayout" name="Hlayout_">
       <item>
-       <widget class="QOpenGLWidget" name="SceneGL_">
+       <widget class="SceneGL" name="SceneGL_" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>1</horstretch>
@@ -368,6 +368,14 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>SceneGL</class>
+   <extends>QWidget</extends>
+   <header>scenegl.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
